AWS/Nagios_p/internet_gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.nagios.id}"
  tags   = "${var.tags}"
}
